--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="./Argentavis_Egg.png">
 </head>
 <body>
     <canvas id="canvas1" width="500" height="500"
         style="border-style: solid;">
     </canvas>
-    <script src="bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 </html>
