--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
     <canvas id="canvas1" width="500" height="500"
         style="border-style: solid;">
     </canvas>
+    <p id="sample"></p>
+    <button id="run">run</button>
+    <span id="runText"></span>
+    <div id="runContent">
+        <p></p><p></p>
+    </div>
     <script src="./bundle.js"></script>
 </body>
 </html>
